--- a/HTML&CSS 콜라보/HTML&JS/index.html
+++ b/HTML&CSS 콜라보/HTML&JS/index.html
@@ -9,12 +9,29 @@
   <img id="logo" src="images/logo.png" width="165" height="58">
   
   <div id="menu">
-    <a onclick="document.getElementById('photo').src = 'images/home.png';"><b>Home</b></a>
-    <a onclick="document.getElementById('photo').src = 'images/seoul.png';">Seoul</a>
-    <a onclick="document.getElementById('photo').src = 'images/tokyo.png';">Tokyo</a>
-    <a onclick="document.getElementById('photo').src = 'images/paris.png';">Paris</a>
+    <a onclick="clickHome()"><b>Home</b></a>
+    <a onclick="clickSeoul()">Seoul</a>
+    <a onclick="clickTokyo()">Tokyo</a>
+    <a onclick="clickParis()">Paris</a>
   </div>
 
   <img id="photo" src="images/home.png" width="90%">
+
+  //HTML 코드부분에는 JS코드를 최대한 줄여서 깔끔하게 정리
+  <script>
+    //사진을 바꿔주는 함수
+    function clickHome() {
+      document.getElementById('photo').src = 'images/home.png';
+    }
+    function clickSeoul() {
+      document.getElementById('photo').src = 'images/seoul.png';
+    }
+    function clickTokyo() {
+      document.getElementById('photo').src = 'images/tokyo.png';
+    }
+    function clickParis() {
+      document.getElementById('photo').src = 'images/paris.png';
+    }
+  </script>
 </body>
 </html>
