practice : jquery 사용
* 더 간결하게 코드 사용하기 위한 jquery 라이브러리 사용
* .attr , .css 사용

--- a/HTML&CSS 콜라보/HTML&JS/index.html
+++ b/HTML&CSS 콜라보/HTML&JS/index.html
@@ -17,40 +17,74 @@
 
   <img id="photo" src="images/home.png" width="90%">
 
+  // jquery 사용 (좀 더 간편하게 코딩하기 위해) - jquer cdn 홈페이지
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
   //HTML 코드부분에는 JS코드를 최대한 줄여서 깔끔하게 정리
   <script>
     //사진을 바꿔주는 함수
     function clickHome() {
-      document.getElementById('photo').src = 'images/home.png';
-      document.getElementById('home').style.fontWeight = 'bold';
 
-      document.getElementById('seoul').style.fontWeight = 'normal';
-      document.getElementById('tokyo').style.fontWeight = 'normal';
-      document.getElementById('paris').style.fontWeight = 'normal';
+      //'attr'은 속성의 줄임말로 앞의 photo라는 id를 가진 요소의 src 속성을 images/home.png로 바꿔주라는 의미
+      $('#photo').attr('src','images/home.png');
+
+      //css 속성값을 변경할 수 도 있음
+      $('#home').css('font-weight','bold');
+      $('#seoul').css('font-weight','normal');
+      $('#tokyo').css('font-weight','normal');
+      $('#paris').css('font-weight','normal');
+
+      // document.getElementById('photo').src = 'images/home.png';
+      // document.getElementById('home').style.fontWeight = 'bold';
+
+      // document.getElementById('seoul').style.fontWeight = 'normal';
+      // document.getElementById('tokyo').style.fontWeight = 'normal';
+      // document.getElementById('paris').style.fontWeight = 'normal';
     }
     function clickSeoul() {
-      document.getElementById('photo').src = 'images/seoul.png';
-      document.getElementById('seoul').style.fontWeight = 'bold';
+      $('#photo').attr('src','images/seoul.png'); 
 
-      document.getElementById('home').style.fontWeight = 'normal';
-      document.getElementById('tokyo').style.fontWeight = 'normal';
-      document.getElementById('paris').style.fontWeight = 'normal';
+      $('#home').css('font-weight','normal');
+      $('#seoul').css('font-weight','bold');
+      $('#tokyo').css('font-weight','normal');
+      $('#paris').css('font-weight','normal');
+
+      // document.getElementById('photo').src = 'images/seoul.png';
+      // document.getElementById('seoul').style.fontWeight = 'bold';
+
+      // document.getElementById('home').style.fontWeight = 'normal';
+      // document.getElementById('tokyo').style.fontWeight = 'normal';
+      // document.getElementById('paris').style.fontWeight = 'normal';
     }
     function clickTokyo() {
-      document.getElementById('photo').src = 'images/tokyo.png';
-      document.getElementById('tokyo').style.fontWeight = 'bold';
+      $('#photo').attr('src','images/tokyo.png');
 
-      document.getElementById('home').style.fontWeight = 'normal';
-      document.getElementById('seoul').style.fontWeight = 'normal';
-      document.getElementById('paris').style.fontWeight = 'normal';
+      $('#home').css('font-weight','noraml');
+      $('#seoul').css('font-weight','normal');
+      $('#tokyo').css('font-weight','bold');
+      $('#paris').css('font-weight','normal');
+
+      // document.getElementById('photo').src = 'images/tokyo.png';
+      // document.getElementById('tokyo').style.fontWeight = 'bold';
+
+      // document.getElementById('home').style.fontWeight = 'normal';
+      // document.getElementById('seoul').style.fontWeight = 'normal';
+      // document.getElementById('paris').style.fontWeight = 'normal';
     }
     function clickParis() {
-      document.getElementById('photo').src = 'images/paris.png';
-      document.getElementById('paris').style.fontWeight = 'bold';
+      $('#photo').attr('src','images/paris.png');
+
+      $('#home').css('font-weight','normal');
+      $('#seoul').css('font-weight','normal');
+      $('#tokyo').css('font-weight','normal');
+      $('#paris').css('font-weight','bold');
+
+      // document.getElementById('photo').src = 'images/paris.png';
+      // document.getElementById('paris').style.fontWeight = 'bold';
       
-      document.getElementById('home').style.fontWeight = 'normal';
-      document.getElementById('seoul').style.fontWeight = 'normal';
-      document.getElementById('tokyo').style.fontWeight = 'normal';
+      // document.getElementById('home').style.fontWeight = 'normal';
+      // document.getElementById('seoul').style.fontWeight = 'normal';
+      // document.getElementById('tokyo').style.fontWeight = 'normal';
     }
   </script>
 </body>
