--- a/HTML&CSS 콜라보/HTML&JS/index.html
+++ b/HTML&CSS 콜라보/HTML&JS/index.html
@@ -11,18 +11,25 @@
   <div id="menu">
     <!-- 마우스로 클릭하면(이벤트) 사진이 바뀐다(이벤트 핸들링) -->
     <!-- 마우스로 클릭하는 행동이 '이벤트'이고, 이 때 동작하게 되는 clickHome()을 '이벤트 핸들러'라고함 -->
-    <a id="home" onclick="clickHome()">Home</a>
+
+    <a id="home">Home</a>
+    <a id="seoul">Seoul</a>
+    <a id="tokyo">Tokyo</a>
+    <a id="paris">Paris</a>
+
+    <!-- <a id="home" onclick="clickHome()">Home</a>
     <a id="seoul"onclick="clickSeoul()">Seoul</a>
     <a id="tokyo" onclick="clickTokyo()">Tokyo</a>
-    <a id="paris" onclick="clickParis()">Paris</a>
+    <a id="paris" onclick="clickParis()">Paris</a> -->
   </div>
 
-  <img id="photo" src="images/home.png" width="90%" onmouseenter="mouseEnterPhoto();" onmouseleave="mouseLeavePhoto();">
+  <!-- <img id="photo" src="images/home.png" width="90%" onmouseenter="mouseEnterPhoto();" onmouseleave="mouseLeavePhoto();"> -->
+  <img id="photo" src="images/home.png" width="90%">
 
    <!-- jquery 사용 (좀 더 간편하게 코딩하기 위해) - jquer cdn 홈페이지 -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-  <!-- HTML 코드부분에는 JS코드를 최대한 줄여서 깔끔하게 정리 -->
+  <!-- HTML 코드부분에는 JS코드를 최대한 줄여서 깔끔하게 정리하기! -->
   <script>
     //사진을 바꿔주는 함수
     function clickHome() {
@@ -89,7 +96,7 @@
       // document.getElementById('tokyo').style.fontWeight = 'normal';
     }
 
-    // 사진에 그림자
+    // 사진에 그림자 넣었다 빼는 함수
     function mouseEnterPhoto() {
       $('#photo').css('box-shadow','5px 10px');
     }
@@ -97,6 +104,20 @@
     function mouseLeavePhoto() {
       $('#photo').css('box-shadow','none');
     }
+
+    // 마우스 클릭시 사진 변경 (위에 HTML 코드에 주석처리 되어있는 onclick과 같은 기능)
+    // on 앞의 태그들(home,seoul,tokyo...)을 '클릭'하면 만들어준 'click~ '함수들 실행
+    
+    $('#home').on('click',clickHome); // * 주의! : 함수 옆에 () 안붙음 *
+    $('#seoul').on('click',clickSeoul);
+    $('#tokyo').on('click',clickTokyo);
+    $('#paris').on('click',clickParis);
+
+    // 사진에 마우스 올려둘때 그림자 넣었다, 뺐다 하는 함수
+    $('#photo').on('mouseenter',mouseEnterPhoto);
+    $('#photo').on('mouseleave',mouseLeavePhoto);
+
+
   </script>
 </body>
 </html>
