--- a/HTML&CSS 콜라보/HTML&JS/index.html
+++ b/HTML&CSS 콜라보/HTML&JS/index.html
@@ -100,9 +100,23 @@
     function mouseEnterPhoto() {
       $('#photo').css('box-shadow','5px 10px');
     }
-
     function mouseLeavePhoto() {
       $('#photo').css('box-shadow','none');
+    }
+
+    // 키 입력으로 사진 바꾸는 함수
+    function processKeyEvent(event) {
+      if (event['key'] === '1') {
+        clickHome();
+      } else if (event['key'] === '2'){
+        clickSeoul();
+      }
+      else if (event['key'] === '3'){
+        clickTokyo();
+      }
+      else if (event['key'] === '4'){
+        clickParis();
+      }
     }
 
     // 마우스 클릭시 사진 변경 (위에 HTML 코드에 주석처리 되어있는 onclick과 같은 기능)
@@ -112,6 +126,9 @@
     $('#seoul').on('click',clickSeoul);
     $('#tokyo').on('click',clickTokyo);
     $('#paris').on('click',clickParis);
+
+    // 페이지 전체(document)에 다음 키보드 이벤트 핸들링을 등록(processKeyEvent함수)
+    $(document).on('keydown',processKeyEvent);
 
     // ** 위의 jQuery코드 순수 Vanilla JavaScript로 구현시 아래와 같음 **
     // document.getElementById('home').addEventListener('click', clickHome);
