--- a/DOM/index.html
+++ b/DOM/index.html
@@ -19,6 +19,10 @@
       <input type="submit" value="로그인" id="submit-btn">
     </form>
   </body>
+
+  <script>
+    document.getElementById('submit-btn').style.backgroundColor='red';
+  </script>
 </html>
 
 <!-- 각 태그에는 각 태그의 속성들도 들어가 있음
