refactor : DOM 트리 이해하기
* 돔 객체 접근하여 코드 변경

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -21,6 +21,9 @@
   </body>
 
   <script>
+    // 웹사이트의 요소를 바꾸고 싶으면 해당 돔 객체에 접근해야함
+    // 돔의 최상위 객체는 html이 아니라 document , document 객체를 통해 다른 돔의 객체들에 접근할 수 있음 
+    // 사용자가 돔 객체에 접근하여 변경하면 브라우저는 다시 코드를 확인하여 시각화하여 반영함
     document.getElementById('submit-btn').style.backgroundColor='red';
   </script>
 </html>
