refactor : 스크롤 올리기 추가
* 버튼 누르면 스크롤 맨위로 올리는 기능 추가
* animate 효과 사용

--- a/스크롤 이벤트/index.html
+++ b/스크롤 이벤트/index.html
@@ -23,6 +23,12 @@
        // opacity 는 투명도를 결정 : 1이면 완전히 불투명, 0이면 완전히 투명한 상태 
        $('.top').css('opacity', 1 - $(window).scrollTop() / $('.top').height()); // 스크롤 내릴때마다 투명해지면서 200위치까지 내리면 완전히 투명해짐
      })
+
+     $('.go-to-top').on('click',function(){
+      // $(window).scrollTop(0);
+
+      $('html, body').animate({scrollTop: 0}, 500); // 스크롤 맨위(scrollTop: 0)로 500ms초 동안 이동
+     })
       
     </script>
   </body>
